--- a/css/style.css
+++ b/css/style.css
@@ -1277,9 +1277,6 @@ section:not(:has(.hero__slider.owl-carousel)) {
 
 .swiper-slide {
     display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 5px;
     overflow: hidden;
     box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.2);
 }
@@ -1999,14 +1996,16 @@ section:not(:has(.hero__slider.owl-carousel)) {
   background: #100028;
   padding-bottom: 70px;
 }
-
 .contact__widget__item {
-  margin-bottom: 30px;
+  margin-top: 18px;
+  margin-bottom: 18px;
+  display: flex;
+  column-gap: 30px;
 }
 .contact__widget__item__icon {
   position: relative;
-  height: 70px;
-  width: 70px;
+  height: 65px;
+  width: 65px;
   line-height: 50px;
   color: white;
   font-size: 30px;
