--- a/css/style.css
+++ b/css/style.css
@@ -565,24 +565,39 @@ section:not(:has(.hero__slider.owl-carousel)) {
   position: relative;
   height: 100vh;
   width: 100%;
-  /* filter: drop-shadow(30px 0px 12px rgba(255, 0, 0, 0.5)); */
 }
 .hero__image__container::before {
   content: "";
-  height: 60%;
-  width: 90%;
+  height: 55%;
+  width: 100%;
   position: absolute;
-  bottom: 10%;
-  right: 2%;
+  bottom: 16%;
+  right: 1%;
   border: solid rgba(0, 0, 255, 0.2) 2px;
   animation: shadow-apparition 0.7s ease-in 1.4s forwards;
 }
 .hero__image {
-  width: 480px !important;
+  width: 460px !important;
   position: absolute;
-  bottom: 10%;
+  bottom: 16%;
   left: 14%;
   margin-bottom: 2px;
+}
+@media only screen and (max-width: 405px) {
+  .hero__image__container::before {
+    content: "";
+    border: solid #00bfe7 2px;
+    height: 50%;
+    width: 80%;
+    position: absolute;
+    bottom: 16%;
+    right: 2%;
+  }
+}
+@media screen and (max-width: 576px) {
+  .hero__image__container::before {
+    width: 98% !important;
+  }
 }
 @keyframes shadow-apparition {
   from {
@@ -592,17 +607,6 @@ section:not(:has(.hero__slider.owl-carousel)) {
   to {
     border: solid #00bfe7 2px;
     box-shadow: 0px 0px 40px #00bfe7;
-  }
-}
-@media only screen and (max-width: 405px) {
-  .hero__image__container::before {
-    content: "";
-    border: solid #00bfe7 2px;
-    height: 50%;
-    width: 80%;
-    position: absolute;
-    bottom: 10%;
-    right: 2%;
   }
 }
 /*--------------------------------------------------------------
