--- a/css/style.css
+++ b/css/style.css
@@ -43,14 +43,46 @@ h6 {
   margin: 0;
   background: linear-gradient(
     360deg, 
-    white, 
-    white,
-    white
+    #ffffff, 
+    #ffffff,
+    #ffffff
   );
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 800;
   font-family: "Play", sans-serif;
+}
+
+.button {
+  background-color: #fe53bb; /* Bouton : rose vif */
+  color: #ffffff; /* Texte du bouton : blanc */
+}
+
+.button:hover {
+  background-color: #1b4fde; /* Bouton survolé : bleu foncé */
+}
+
+.h1 {
+  color: #1b4fde ; /* Titre : bleu foncé */
+}
+
+primary-btn {
+  color: #fe53bb ; /* Sous-titre : rose vif */
+}
+
+span:not(.typed) {
+  background: linear-gradient(to right, #4f69ff, #fe53bb 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  background-clip: text;
+}
+
+.a {
+  color: #fe53bb; /* Lien : rose vif */
+}
+
+.a:hover {
+  color: #1b4fde; /* Lien survolé : bleu foncé */
 }
 
 h1 {
@@ -117,12 +149,12 @@ ol {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: white; /* Black color */
+  background: #ffffff; /* Black color */
   border-radius: 10px;
 }
 
 ::-webkit-scrollbar-thumb:hover {
-  background: white; /* Darker black color on hover */
+  background: #ffffff; /* Darker black color on hover */
 }
 
 ::-webkit-scrollbar-track {
@@ -135,6 +167,9 @@ ol {
 section {
   position: relative !important;
   padding: 10px;
+}
+section>.container {
+  padding: 0 20px;
 }
 .section-title {
   z-index: 11 !important;
@@ -176,91 +211,95 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   bottom: 0;
   height: 5px;
   width: 70px;
-  background: #00bfe7;
+  background: #451bde;
   content: "";
 }
 
 .set-bg {
-  background-color: #000116;
+  /* background-color: #000116; */
   background-repeat: no-repeat;
   background-size: cover;
   background-position: top center;
 }
 
 .shadow-blue {
-  box-shadow: 0px 0px 50px #00bfe7;
+  box-shadow: 0px 0px 50px #1b4fde;
 }
 
-.text-white h1,
-.text-white h2,
-.text-white h3,
-.text-white h4,
-.text-white h5,
-.text-white h6,
-.text-white p,
-.text-white span,
-.text-white li,
-.text-white a {
+.text-#ffffff h1,
+.text-#ffffff h2,
+.text-#ffffff h3,
+.text-#ffffff h4,
+.text-#ffffff h5,
+.text-#ffffff h6,
+.text-#ffffff p,
+.text-#ffffff span,
+.text-#ffffff li,
+.text-#ffffff a {
   color: #fff;
 }
 
 /* buttons */
 .primary-btn {
-  display: inline-block;
-  font-size: 15px;
-  font-family: "Play", sans-serif;
-  font-weight: 700;
-  padding: 14px 32px 12px;
   color: #ffffff;
-  text-transform: uppercase;
-  letter-spacing: 2px;
-  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 13rem;
+  overflow: hidden;
+  height: 3rem;
+  background-size: 300% 300%;
+  cursor: pointer;
+  backdrop-filter: blur(1rem);
+  transition: 0.5s;
+  animation: gradient_301 5s ease infinite;
+  border: double 2px transparent;
+  background-image: linear-gradient(#000116, #000116),
+    linear-gradient(
+      137.48deg,
+      #1b4fde 10%,
+      #fe53bb 45%,
+      #8f51ea 67%,
+      #0044ff 87%
+    );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+}
+
+.primary-btn:hover #container-stars {
   z-index: 1;
+  background-color: #212121;
 }
+
 .primary-btn:hover {
-  color: #ffffff !important;
+  transform: scale(1.1);
 }
-.primary-btn:hover:before {
-  height: 100%;
-  width: 100%;
+
+.primary-btn:active {
+  border: double 4px #fe53bb;
+  background-origin: border-box;
+  background-clip: content-box, border-box;
+  animation: none;
 }
-.primary-btn:hover:after {
-  height: 100%;
-  width: 100%;
-}
-.primary-btn:before {
-  position: absolute;
-  left: 0;
-  top: 0;
-  height: 30px;
-  width: 30px;
-  border-left: 2px solid #00bfe7;
-  border-top: 2px solid #00bfe7;
-  content: "";
-  z-index: -1;
-  -webkit-transition: all, 0.7s;
-  -o-transition: all, 0.7s;
-  transition: all, 0.7s;
-}
-.primary-btn:after {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  height: 30px;
-  width: 30px;
-  border-right: 2px solid #00bfe7;
-  border-bottom: 2px solid #00bfe7;
-  content: "";
-  z-index: -1;
-  -webkit-transition: all, 0.7s;
-  -o-transition: all, 0.7s;
-  transition: all, 0.7s;
+
+@keyframes gradient_301 {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .site-btn {
   font-size: 15px;
   color: #ffffff;
-  background: #00bfe7;
+  background: #1b4fde;
   font-family: "Play", sans-serif;
   font-weight: 700;
   border: none;
@@ -336,7 +375,6 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   Header
 -----------------------*/
 .header {
-  background-color: #000116 !important;
   position: fixed;
   left: 0;
   top: 0;
@@ -346,6 +384,15 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .header.scrolled {
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  z-index: 9;
+  transition: box-shadow 0.3s ease-in-out;
+  background: rgba(255, 255, 255, 0.01);
+  backdrop-filter: blur(10px);
+  text-align: center;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   z-index: 20;
 }
@@ -428,7 +475,26 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   bottom: 0;
   width: 100%;
   height: 2px;
-  background: #00bfe7;
+  backdrop-filter: blur(1rem);
+  transition: 0.5s;
+  border: solid 1px transparent;
+  z-index: -1;
+  background-image: linear-gradient(
+      137.48deg,
+      #451bde 10%,
+      #451bde 45%,
+      #451bde 67%,
+      #451bde 87%
+    ),
+    linear-gradient(
+      137.48deg,
+      #451bde 10%,
+      #451bde 45%,
+      #451bde 67%,
+      #0044ff 87%
+    );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
   content: "";
   -webkit-transform: scale(0);
       -ms-transform: scale(0);
@@ -451,9 +517,9 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   width: 1px;
   background: rgba(225, 225, 225, 0.2);
   content: "";
-}
+} 
 .header__nav__social a {
-  color: #ffffff;
+  color: white;
   font-size: 18px;
   margin-right: 20px;
 }
@@ -473,10 +539,12 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   animation: float 9s ease-in-out infinite;
   border-radius: 50%;
   
-  background: radial-gradient(
-    circle,
-    rgb(110, 17, 2) 100%,
-    transparent 20%
+  background:linear-gradient(
+      137.48deg,
+      #1b4fde 10%,
+      #451bde 87%,
+      #451bde 87%,
+      #451bde 87%
   );
 
   filter: blur(80px);
@@ -608,11 +676,83 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   left: 13%;
   margin-bottom: 2px;
 }
+.carousel {
+  width: 100%;
+  padding: 100px 0;
+}
 
+.carousel img {
+  cursor: grab;
+}
+
+.carousel.dragging img {
+  cursor: grabbing;
+}
+
+.carousel--wrap {
+  white-space: nowrap;
+}
+
+.carousel--item {
+  display: inline-block;
+  width: 400px;
+  padding: 3vw;
+  user-select: none;
+} 
+
+.carousel--item figure {
+    position: relative;
+    z-index: 1;
+    display: block;
+    height: 300px;
+    overflow: hidden;
+}
+
+.carousel--item figure img {
+    position: absolute;
+    z-index: 1;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    vertical-align: middle;
+    transform-origin: center;
+}
+
+.carousel--item  figure h2 {
+  position: absolute;
+  z-index: 1;
+  bottom: 1.8vw;
+  font-size: 6vw;
+  bottom: 1vw;
+  color: #fff;
+}
+  
+.carousel--progress {
+  position: absolute;
+  z-index: 2;
+  pointer-events: none;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 0);
+  width: 20vw;
+  height: 2px;
+  background: #020828;
+} 
+.carousel--progress-bar {
+  position: absolute;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: #0044ff;
+  transform: scaleX(0);
+  transform-origin: 0% 0%;
+}
 @media only screen and (max-width: 405px) {
   .hero__image__container::before {
     content: "";
-    border: solid #00bfe7 2px;
+    border: solid #0044ff 2px;
     height: 50%;
     width: 80%;
     position: absolute;
@@ -626,8 +766,8 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
     box-shadow: 0px 0px 0px gray;
   }
   to {
-    border: solid #00bfe7 2px;
-    box-shadow: 0px 0px 40px #00c1e7c3;
+    border: solid #451bde 2px;
+    box-shadow: 0px 0px 40px #451bde;
   }
 }
 /*--------------------------------------------------------------
@@ -696,7 +836,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .skills .skills-item {
-  background-color: #020828;
+  background-color: #02082892;
   box-shadow: 0px 5px 90px 0px rgba(0, 0, 0, 0.1);
   height: 100%;
   padding: 60px 30px;
@@ -752,7 +892,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .skills .skills-item.item-cyan path {
-  fill: #0dcaf0;
+  fill: #fff;
 }
 
 .skills .skills-item.item-cyan:hover .icon path {
@@ -760,11 +900,11 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .skills .skills-item.item-cyan:hover .icon svg .svg-path {
-  fill: #0dcaf0;
+  fill: #1b4fde;
 }
 
 .skills .skills-item.item-orange path {
-  color: #0dcaf0;
+  color: #fff;
 }
 
 .skills .skills-item.item-orange:hover .icon path {
@@ -776,7 +916,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .skills .skills-item.item-teal path {
-  color: #0dcaf0;
+  color: #fff;
 }
 
 .skills .skills-item.item-teal:hover .icon path {
@@ -788,7 +928,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .skills .skills-item.item-red path {
-  color: #0dcaf0;
+  color: #fff;
 }
 
 .skills .skills-item.item-red:hover .icon path {
@@ -800,7 +940,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .skills .skills-item.item-indigo path {
-  color: #0dcaf0;
+  color: #fff;
 }
 
 .skills .skills-item.item-indigo:hover .icon path {
@@ -812,7 +952,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .skills .skills-item.item-pink path {
-  color: #0dcaf0;
+  color: #fff;
 }
 
 .skills .skills-item.item-pink:hover .icon path {
@@ -1117,7 +1257,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   margin-right: 10px;
 }
 .latest__slider.owl-carousel .owl-dots button.active {
-  background: #00bfe7;
+  background: #1b4fde;
 }
 .latest__slider.owl-carousel .owl-dots button:last-child {
   margin-right: 0;
@@ -1150,7 +1290,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 .callto__text a {
   color: #ffffff;
-  background: #00bfe7;
+  background: #1b4fde;
   font-size: 15px;
   font-weight: 700;
   font-family: "Play", sans-serif;
@@ -1164,6 +1304,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   Footer
 -----------------------*/
 .footer {
+  margin-top: 50px;
   background: inherit;
 }
 
@@ -1269,7 +1410,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   border: none;
   height: 50px;
   width: 50px;
-  background: #00bfe7;
+  background: #1b4fde;
   line-height: 50px;
   text-align: center;
   position: absolute;
@@ -1290,10 +1431,10 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   font-weight: 300;
 }
 .footer__copyright__text i {
-  color: #00bfe7;
+  color: #1b4fde;
 }
 .footer__copyright__text a {
-  color: #00bfe7;
+  color: #1b4fde;
 }
 
 /*---------------------
@@ -1349,7 +1490,20 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   padding-left: 30px;
 }
 .about__text .services__item .services__item__icon:after {
-  border-color: #00bfe7;
+  backdrop-filter: blur(1rem);
+  transition: 0.5s;
+  border: double 2px transparent;
+  z-index: -1;
+  background-image: linear-gradient(#000116, #000116),
+    linear-gradient(
+      137.48deg,
+      #1b4fde 10%,
+      #fe53bb 45%,
+      #8f51ea 67%,
+      #0044ff 87%
+    );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
 }
 
 .about__text__desc {
@@ -1395,7 +1549,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   margin-right: 10px;
 }
 .testimonial__slider.owl-carousel .owl-dots button.active {
-  background: #00bfe7;
+  background: #1b4fde;
 }
 .testimonial__slider.owl-carousel .owl-dots button:last-child {
   margin-right: 0;
@@ -1493,7 +1647,20 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   top: 0;
   width: 100%;
   height: 100%;
-  border: 2px solid #00bfe7;
+  backdrop-filter: blur(1rem);
+  transition: 0.5s;
+  border: double 2px transparent;
+  z-index: -1;
+  background-image: linear-gradient(#000116, #000116),
+    linear-gradient(
+      137.48deg,
+      #1b4fde 10%,
+      #fe53bb 45%,
+      #8f51ea 67%,
+      #0044ff 87%
+    );
+  background-origin: border-box;
+  background-clip: content-box, border-box;
   content: "";
   -webkit-transition: all, 0.5s;
   -o-transition: all, 0.5s;
@@ -1539,7 +1706,17 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 .resume .resume-item {
   padding: 0 0 20px 20px;
   margin-top: -2px;
-  border-left: 2px solid #00bfe7;
+  border-left: 2px solid transparent;
+  border-left-width: 2px;
+  border-left-style: solid;
+  border-image-source: linear-gradient(
+    140.48deg,
+    #1b4fde 10%,
+    #fe53bb 45%,
+    #8f51ea 67%,
+    #0044ff 87%
+  );
+  border-image-slice: 1;
   position: relative;
 }
 
@@ -1581,8 +1758,8 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   border-radius: 50px;
   left: -9px;
   top: 0;
-  background: #00bfe7;
-  border: 2px solid #00bfe7;
+  background: #1b4fde;
+  border: 2px solid #1b4fde;
 }
 
 /*---------------------
@@ -1606,7 +1783,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   padding: 6px 22px;
 }
 .portfolio__filter li.active {
-  border: 1px solid #00bfe7;
+  border: 1px solid #1b4fde;
 }
 .portfolio__filter li:last-child {
   margin-right: 0;
@@ -1696,38 +1873,27 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   display: block;
 }
 
-.pagination__option {
-  text-align: center;
-  padding-top: 20px;
+.swiper-cont {
+    width: 100%;
+    height: 100%;
 }
-.pagination__option.blog__pagi {
-  padding-top: 5px;
-}
-.pagination__option .arrow__pagination {
-  font-size: 15px;
-  color: #ffffff;
-  display: inline-block;
-  text-transform: uppercase;
-}
-.pagination__option .arrow__pagination.left__arrow {
-  margin-right: 26px;
-}
-.pagination__option .arrow__pagination.right__arrow {
-  margin-left: 18px;
-}
-.pagination__option .arrow__pagination span {
-  opacity: 0.5;
-}
-.pagination__option .number__pagination {
-  font-size: 18px;
-  color: #ffffff;
-  height: 50px;
-  width: 50px;
-  background-color: #020828;
-  line-height: 50px;
-  text-align: center;
-  display: inline-block;
-  margin-right: 6px;
+.swiper-slid {
+    text-align: center;
+    font-size: 18px;
+    background: #fff;
+    /* Centrer le texte verticalement */
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    -webkit-justify-content: center;
+    justify-content: center;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
 }
 
 /*---------------------
@@ -1900,7 +2066,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 .blog__details__quote i {
   font-size: 36px;
-  color: #00bfe7;
+  color: #1b4fde;
   position: absolute;
   right: 30px;
   bottom: 25px;
@@ -2169,7 +2335,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   top: 0;
   width: 100%;
   height: 100%;
-  border: 2px solid #00bfe7;
+  border: 2px solid #1b4fde;
   content: "";
   -webkit-transition: all, 0.5s;
   -o-transition: all, 0.5s;
@@ -2261,6 +2427,88 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 .contact__form form textarea:focus {
   border-color: #e1e1e1;
 }
+
+.cta {
+  display: flex;
+  padding: 11px 33px;
+  text-decoration: none;
+  color: #ffffff;
+  background: #6225e6;
+  transition: 1s;
+  box-shadow: 6px 6px 0 black;
+  transform: skewX(-15deg);
+  border: none;
+  cursor: pointer;
+}
+
+.cta:focus {
+  outline: none;
+}
+
+.cta:hover {
+  transition: 0.5s;
+  box-shadow: 10px 10px 0 #290e8c;
+}
+
+.cta .second {
+  transition: 0.5s;
+  margin-right: 0px;
+}
+
+.cta:hover .second {
+  transition: 0.5s;
+  margin-right: 45px;
+}
+
+.span {
+  transform: skewX(15deg);
+}
+
+.second {
+  width: 20px;
+  margin-left: 30px;
+  position: relative;
+  top: 12%;
+}
+
+.one {
+  transition: 0.4s;
+  transform: translateX(-60%);
+}
+
+.two {
+  transition: 0.5s;
+  transform: translateX(-30%);
+}
+
+.cta:hover .three {
+  animation: color_anim 1s infinite 0.2s;
+}
+
+.cta:hover .one {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.6s;
+}
+
+.cta:hover .two {
+  transform: translateX(0%);
+  animation: color_anim 1s infinite 0.4s;
+}
+
+@keyframes color_anim {
+  0% {
+    fill: #ffffff;
+  }
+
+  50% {
+    fill: #451bde;
+  }
+
+  100% {
+    fill: #ffffff;
+  }
+}
+
 
 /*--------------------------------- Responsive Media Quaries -----------------------------*/
 @media only screen and (min-width: 1200px) {
@@ -2410,13 +2658,22 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   }
 
   .slicknav_nav {
-    background: #222222;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   }
 
   .slicknav_btn {
     position: absolute;
     right: 10px;
     top: 26px;
+    background: linear-gradient(
+      137.48deg,
+      #1b4fde 20%,
+      #fe53bb 80%,
+      #8f51ea 100%,
+      #0044ff 87%
+    );
+    border-radius: 200px;
+    padding: 12px 10px;
   }
 
   .header .container {
@@ -2521,24 +2778,32 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   .slicknav_nav .slicknav_row:hover {
     border-radius: 0;
     background: transparent;
-    color: #111111;
+    color: white;
   }
 
   .slicknav_nav a:hover {
     border-radius: 0;
     background: transparent;
-    color: #111111;
+    color: white;
   }
 
   .slicknav_nav {
-    background: #222222;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   }
 
   .slicknav_btn {
     position: absolute;
     right: 10px;
     top: 26px;
-    background: transparent;
+    background: linear-gradient(
+      137.48deg,
+      #1b4fde 20%,
+      #fe53bb 80%,
+      #8f51ea 100%,
+      #0044ff 87%
+    );
+    border-radius: 200px;
+    padding: 12px 10px;
   }
 
   .header .container {
