Added blur effect to swiper

--- a/css/style.css
+++ b/css/style.css
@@ -1518,7 +1518,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 .swiper-slide {
   display: flex;
   overflow: hidden;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5);
+  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.6);
 }
 
 .swiper-slide img {
@@ -1527,6 +1527,9 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
     object-fit: cover;
 }
 
+.swiper-slide:not(.swiper-slide-visible) {
+  filter: blur(8px);
+}
 /*---------------------
   Testimonial
 -----------------------*/
