--- a/css/style.css
+++ b/css/style.css
@@ -77,7 +77,7 @@ h6 {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-weight: 800;
-  font-family: "Play", sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .button {
@@ -139,7 +139,7 @@ h6 {
 p {
   font-size: 16px;
   font-family: "Josefin Sans", sans-serif;
-  color: #adadad;
+  color: #b0b4c1;
   font-weight: 400;
   line-height: 26px;
   margin: 0 0 15px 0;
@@ -605,7 +605,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   margin: 5px auto;
 }
 .owl-dots button {
-  color: #adadad;
+  color: #b0b4c1;
   font-size: 18px;
   font-family: "Play", sans-serif;
   margin-right: 16px;
@@ -811,43 +811,10 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 .news__item__icon:after {
   border-color: gold !important;
 } */
-.fa-star:nth-child(1) {
-  color: gold;
-  font-size: 14px;
-  animation: reflexion-left 2s infinite;
-}
-.fa-star:nth-child(2) {
-  color: gold;
-  font-size: 14px;
-  animation: reflexion-right 2s infinite;
-}
-@keyframes reflexion-left {
-  0% {
-    transform: rotate(0deg) scale(1);
-    text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
-  }
-  50% {
-    transform: rotate(-10deg) scale(1.1);
-    text-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
-  }
-  100% {
-    transform: rotate(0deg) scale(1);
-    text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
-  }
-}
-@keyframes reflexion-right {
-  0% {
-    transform: rotate(0deg) scale(1);
-    text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
-  }
-  50% {
-    transform: rotate(10deg) scale(1.1);
-    text-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
-  }
-  100% {
-    transform: rotate(0deg) scale(1);
-    text-shadow: 0 0 10px rgba(255, 215, 0, 0.5);
-  }
+
+/* Appliquer l'animation à l'icône */
+.fa-chart-line {
+  color: #fe53bb;
 }
 /*--------------------------------------------------------------
 # Skills Section
@@ -1071,7 +1038,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   font-weight: 700;
 }
 .work__item__hover ul li {
-  color: #adadad;
+  color: #b0b4c1;
   list-style: none;
   font-size: 16px;
   margin-right: 23px;
@@ -1413,7 +1380,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   list-style: none;
 }
 .footer__option__item ul li a {
-  color: #adadad;
+  color: #b0b4c1;
   font-size: 16px;
   font-weight: 300;
   line-height: 32px;
@@ -1505,12 +1472,12 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   right: -22px;
   top: -3px;
   content: "/";
-  color: #adadad;
+  color: #b0b4c1;
   font-size: 20px;
 }
 .breadcrumb__links span {
   font-size: 16px;
-  color: #adadad;
+  color: #b0b4c1;
   font-weight: 300;
   display: inline-block;
 }
@@ -1736,7 +1703,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 # Resume Section
 --------------------------------------------------------------*/
 .resume {
-  color: #adadad;
+  color: #b0b4c1;
 }
 
 .resume .resume-title {
@@ -1787,7 +1754,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 
 .resume .resume-item ul li {
   padding-bottom: 10px;
-  color: #adadad;
+  color: #b0b4c1;
 }
 
 .resume .resume-item:last-child {
@@ -1820,7 +1787,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 .portfolio__filter li {
   list-style: none;
   font-size: 16px;
-  color: #adadad;
+  color: #b0b4c1;
   margin-right: 5px;
   display: inline-block;
   padding: 6px 22px;
@@ -1895,7 +1862,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   font-weight: 300;
   margin-right: 24px;
   position: relative;
-  color: #adadad;
+  color: #b0b4c1;
 }
 .portfolio__item__text ul li:after {
   position: absolute;
@@ -1912,7 +1879,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 .portfolio__item__text span {
   font-size: 16px;
   font-weight: 300;
-  color: #adadad;
+  color: #b0b4c1;
   display: block;
 }
 
@@ -2102,7 +2069,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 .blog__details__quote h6 {
   font-size: 15px;
-  color: #adadad;
+  color: #b0b4c1;
   letter-spacing: 0.5px;
   text-transform: uppercase;
   color: #ffffff;
@@ -2252,7 +2219,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   border: 1px solid rgba(225, 225, 225, 0.5);
   background: transparent;
   font-size: 16px;
-  color: #adadad;
+  color: #b0b4c1;
   padding-top: 12px;
   padding-left: 20px;
   font-weight: 300;
@@ -2260,7 +2227,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   resize: none;
 }
 .blog__details__comment form textarea:placeholder {
-  color: #adadad;
+  color: #b0b4c1;
 }
 
 .input__list {
@@ -2274,14 +2241,14 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   border: 1px solid rgba(225, 225, 225, 0.5);
   background: transparent;
   font-size: 16px;
-  color: #adadad;
+  color: #b0b4c1;
   padding-left: 20px;
   font-weight: 300;
   margin-right: 20px;
   margin-bottom: 20px;
 }
 .input__list input:placeholder {
-  color: #adadad;
+  color: #b0b4c1;
 }
 
 /*---------------------
@@ -2442,7 +2409,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   transition: all, 0.3s;
 }
 .contact__form form input:placeholder {
-  color: #adadad;
+  color: #b0b4c1;
 }
 .contact__form form input:focus {
   border-color: #e1e1e1;
@@ -2454,7 +2421,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   background: inherit;
   border: solid #040d44 1px;
   font-size: 16px;
-  color: #adadad;
+  color: #b0b4c1;
   padding-top: 12px;
   padding-left: 20px;
   font-weight: 300;
@@ -2465,7 +2432,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   transition: all, 0.3s;
 }
 .contact__form form textarea:placeholder {
-  color: #adadad;
+  color: #b0b4c1;
 }
 .contact__form form textarea:focus {
   border-color: #e1e1e1;
