--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -186,11 +186,24 @@ button {
     cursor: pointer;
     box-shadow: 0 0 15px rgba(95, 21, 156, 0.8), 0 0 30px rgba(95, 21, 156, 0.2);
     transition: box-shadow 0.3s ease, transform 0.3s ease;
+    animation: blinking 2s infinite ease;
 }
 
 #cta-button:hover {
     box-shadow: 0 0 20px rgba(95, 21, 156, 1), 0 0 40px rgba(95, 21, 156, 0.2);
     transform: scale(1.05);
+    animation: unset;
+}
+@keyframes blinking {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.04);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 button::before {
     content: '';
