--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -368,3 +368,141 @@ button:hover span {
         transform: rotate(80deg);
     }
 }
+
+/* Stars */
+section{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    display: none;
+}
+
+@keyframes animateBg{
+    0%,100%{
+        transform: scale(1);
+    }
+    50%{
+        transform: scale(1.2);
+    }
+}
+
+section span{
+    position: absolute;
+    top:50%;
+    left:50%;
+    width: 4px;
+    height: 4px;
+    background: #93dcf0;
+    border-radius: 50%;
+    box-shadow: 0 0 0 4px rgba(100,100,255,0.1),0 0 0 8px rgba(100,100,255,0.1),0 0 20px rgba(100,100,255,0.1);
+    animation: animate 3s linear infinite;
+    overflow: visible !important;
+}
+section span::before{
+    content:'';
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 200px;
+    height: 1px;
+    background: linear-gradient(90deg,#93dcf0,transparent);
+}
+@keyframes animate
+{
+    0%
+    {
+        transform: rotate(315deg) translateX(0);
+        opacity: 1;
+    }
+    70%
+    {
+        opacity: 1;
+    }
+    100%
+    {
+        transform: rotate(315deg) translateX(-1000px);
+        opacity: 0;
+    }
+}
+span:nth-child(1){
+    top: -20px;
+    right: 0;
+    left: initial;
+    animation-delay: 0s;
+    animation-duration: 5s;
+}
+span:nth-child(2){
+    top: -20px;
+    right: 80px;
+    left: initial;
+    animation-delay: 0.2s;
+    animation-duration: 3s;
+}
+span:nth-child(3){
+    top: -20px;
+    right: 0px;
+    left: initial;
+    animation-delay: 0.4s;
+    animation-duration: 2s;
+}
+span:nth-child(4){
+    top: -20px;
+    right: 180px;
+    left: initial;
+    animation-delay: 0.6s;
+    animation-duration: 2s;
+}
+span:nth-child(5){
+    top: -20px;
+    right: 400px;
+    left: initial;
+    animation-delay: 0.8s;
+    animation-duration: 3s;
+}
+span:nth-child(6){
+    top: -20px;
+    right: 600px;
+    left: initial;
+    animation-delay: 1s;
+    animation-duration: 5s;
+}
+span:nth-child(7){
+    top: -20px;
+    right: 50px;
+    left: initial;
+    animation-delay: 1.2s;
+    animation-duration: 4s;
+}
+span:nth-child(8){
+    top: -20px;
+    right: 70px;
+    left: initial;
+    animation-delay: 3s;
+    animation-duration: 3s;
+}
+span:nth-child(9){
+    top: -20px;
+    left: 200px;
+    animation-delay: 0.75s;
+    animation-duration: 5s;
+}
+span:nth-child(9){
+    top: -20px;
+    left: 680px;
+    animation-delay: 2s;
+    animation-duration: 3s;
+}
+span:nth-child(10){
+    top: -20px;
+    left: 650px;
+    animation-delay: 2s;
+    animation-duration: 4s;
+}
+span:nth-child(11){
+    top: -20px;
+    left: 500px;
+    animation-delay: 2s;
+    animation-duration: 5s;
+}
