--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -337,7 +337,7 @@ button:hover span {
                 inset 0 0 80px 3px #5b51ea50,
                 inset 0 0 120px 4px #7253fe10;
     overflow: hidden;
-    opacity: 0;
+    display: none;
 }
 
 /* Stars */
