--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ primary-btn {
 }
 
 span:not(.typed) {
-  background: linear-gradient(to right, #4f69ff, #fe53bb 100%);
+  background: linear-gradient(to right, #687eff, #fe53bb 100%);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   background-clip: text;
@@ -1159,7 +1159,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   overflow: hidden;
 }
 .team__item:hover .team__item__text {
-  bottom: 0;
+  bottom: -20px;
 }
 .team__item.team__item--second {
   margin-top: -60px;
@@ -1175,7 +1175,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   text-align: center;
   position: absolute;
   left: 0;
-  bottom: -500px;
+  bottom: 0;
   width: 100%;
   padding: 50px 0 30px;
   z-index: 1;
