--- a/css/style.css
+++ b/css/style.css
@@ -1175,7 +1175,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   text-align: center;
   position: absolute;
   left: 0;
-  bottom: 0;
+  bottom: -10px;
   width: 100%;
   padding: 50px 0 30px;
   z-index: 1;
@@ -1190,6 +1190,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
   height: 100%;
   width: 100%;
   background: url(../img/team/team-hover.png);
+  backdrop-filter: blur(1px);
   content: "";
   z-index: -1;
 }
@@ -1531,7 +1532,7 @@ section:not(:has(.hero__slider.owl-carousel)):not(:has(.about)) {
 }
 
 .swiper-slide:not(.swiper-slide-visible) {
-  filter: blur(8px);
+  filter: blur(4px);
 }
 /*---------------------
   Testimonial
