--- a/css/bigbang.css
+++ b/css/bigbang.css
@@ -87,7 +87,7 @@ a {
 
 #final-text-container {
     position: fixed;
-    top: 47%;
+    top: 46%;
     left: 50%;
     transform: translate(-50%, -50%);
     display: flex;
@@ -108,7 +108,7 @@ a {
 
 #final-text {
     letter-spacing: 15px;
-    font-size: 52px;
+    font-size: 54px;
 }
 
 @media screen and (max-width: 926px) {
@@ -325,7 +325,7 @@ button:hover span {
     min-width: 800px;
     height: 100vh;
     position: fixed;
-    top: 82%;
+    top: 85%;
     left: -45%;
     border-radius: 50%;
     background-color: #000116;
@@ -348,50 +348,124 @@ section{
     width: 100%;
     height: 100vh;
     display: none;
-    filter: blur(1px);
 }
-
-@keyframes animateBg{
-    0%,100%{
-        transform: scale(1);
-    }
-    50%{
-        transform: scale(1.2);
-    }
-}
-
 section span{
-    position: absolute;
-    top:50%;
-    left:50%;
-    width: 4px;
-    height: 4px;
-    background: #93dcf0;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    width: 2px;
+    height: 2px;
+    background: #fff;
     border-radius: 50%;
-    box-shadow: 0 0 0 4px rgba(100,100,255,0.1),0 0 0 8px rgba(100,100,255,0.1),0 0 20px rgba(100,100,255,0.1);
-    animation: shoot 3s linear infinite;
+    box-shadow: 0 0 0 1px rgba(100, 100, 255, 0.1), 0 0 0 2px rgba(100, 100, 255, 0.1), 0 0 5px rgba(100, 100, 255, 1)  ;
     overflow: visible !important;
+    filter: blur(1px);
+    transform: rotate(315deg) translateY(-20px) translateX(50px);
+    animation:  shoot 3s linear infinite;
 }
 section span::before{
-    content:'';
+    content: '';
     position: absolute;
     top: 50%;
     transform: translateY(-50%);
     width: 200px;
     height: 1px;
-    background: linear-gradient(90deg,#93dcf0,transparent);
+    background: linear-gradient(90deg, #adc0f580, transparent);
 }
 @keyframes shoot {
-    0% {
-        transform: translateX(0);
+    0%
+    {
+        transform: rotate(345deg) translateY(-20px) translateX(0);
         opacity: 1;
     }
-    70% {
-        transform: rotate(6deg) translateX(0);
-        opacity: 1;
+    70%
+    {
+        opacity: 0.2;
+
     }
-    100% {
-        transform: rotate(-4deg) translateX(-2200px);
-        opacity: 0.4;
+    100%
+    {
+        transform: rotate(345deg) translateX(-1500px);
+        opacity: 0;
+
     }
+    
+}
+section span:nth-child(1){
+    top: 0;
+    right: 0;
+    left:initial;
+    animation-delay:0 ;
+    animation-duration: 1s;
+}
+
+section span:nth-child(2){
+    top: 20px;
+    right: 80px;
+    left:initial;
+    animation-delay:0.2s;
+    animation-duration: 3s;
+}
+
+section span:nth-child(3){
+    top: 80px;
+    right: 0px;
+    left:initial;
+    animation-delay:0.4s ;
+    animation-duration: 2s;
+}
+
+section span:nth-child(4){
+    top: 20px;
+    right: 180px;
+    left:initial;
+    animation-delay:0.6s;
+    animation-duration: 1.5s;
+}
+
+section span:nth-child(5){
+    top: 20px;
+    right: 400px;
+    left:initial;
+    animation-delay:0.8s;
+    animation-duration: 2.5s;
+}
+
+section span:nth-child(6){
+    top: 20px;
+    right: 600px;
+    left:initial;
+    animation-delay:1s ;
+    animation-duration: 3s;
+}
+section span:nth-child(7 ){
+    top: 300px;
+    right: 0px;
+    left:initial;
+    animation-delay:1s ;
+    animation-duration: 1.75s;
+}
+
+section span:nth-child(8){
+    top: 20px;
+    right: 700px;
+    left:initial;
+    animation-delay:1.4s ;
+    animation-duration: 1.25s;
+}
+
+section span:nth-child(9){
+    top: 20px;
+    right: 1000px;
+    left:initial;
+    animation-delay:0.75s ;
+    animation-duration: 2.25s;
+}
+
+section span:nth-child(10){
+    top: 20px;
+    right: 1200px;
+    left:initial;
+    animation-delay:2.75s ;
+    animation-duration: 2.25s;
 }
